--- a/pom.xml
+++ b/pom.xml
@@ -158,10 +158,10 @@
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-redis</artifactId>
         </dependency>
-        <dependency>
+      <!--  <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-redis</artifactId>
-        </dependency>
+        </dependency>-->
 
 
        <!-- http-->
@@ -173,10 +173,10 @@
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
         </dependency>
-        <dependency>
+        <!--<dependency>
             <groupId>commons-httpclient</groupId>
             <artifactId>commons-httpclient</artifactId>
-        </dependency>
+        </dependency>-->
 
 
 
@@ -187,13 +187,22 @@
     </dependencies>
 
     <build>
+
+        <finalName>new-sbm</finalName>  <!--最后的包文件名-->
         <plugins>
+            <!--<plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>-->
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-        </plugins>
-    </build>
-
-
+                <!--<version>1.5.4.RELEASE</version>-->
+                <configuration>
+                    <mainClass>com.sbm.NewSbmApplication</mainClass> <!--主类 包含main-->
+                    <layout>JAR</layout> <!---包类型(必须大写) JAR，WAR，ZIP，MODULE，NONE-->
+            </configuration>
+        </plugin>
+    </plugins>
+</build>
 </project>
